<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView

            android:id="@+id/cardView"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:backgroundTint="@color/blue"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <android.support.constraint.ConstraintLayout

                android:id="@+id/cl_toolbar"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <TextView
                    android:id="@+id/tv_nome_cliente"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"

                    tools:text="@string/nomeCliente"
                    tools:textColor="@color/bg_page"
                    android:textSize="20sp"

                    app:layout_constraintTop_toBottomOf="@+id/tv_contaTitle"

                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/bg_page"
            />

            <TextView
                    android:id="@+id/tv_contaTitle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"

                    android:text="@string/contaTitle"

                    android:textColor="@color/bg_page"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
            />

            <TextView
                    android:id="@+id/tv_contaNumero"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"

                    tools:text="@string/agenciaNumero"
                    tools:textColor="@color/bg_page"
                    android:textSize="20sp"
                    android:textColor="@color/bg_page"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nome_cliente"
                    app:layout_constraintStart_toStartOf="@+id/tv_nome_cliente"/>

            <TextView
                    android:id="@+id/tv_barra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="3dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginBottom="8dp"


                    android:text="@string/Barra"
                    android:textColor="@color/bg_page"
                    android:textSize="20sp"

                    app:layout_constraintStart_toEndOf="@id/tv_contaNumero"
                    app:layout_constraintEnd_toStartOf="@id/tv_agencia"
                    app:layout_constraintTop_toTopOf="@+id/tv_contaNumero"
                    app:layout_constraintBottom_toTopOf="@+id/tv_saldo"
            />
            <TextView
                    android:id="@+id/tv_agencia"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="8dp"
                    android:layout_marginStart="5dp"

                    tools:text="01.111222-4"
                    android:textSize="20sp"
                    android:textColor="@color/bg_page"

                    app:layout_constraintStart_toEndOf="@id/tv_barra"
                    app:layout_constraintBottom_toBottomOf="@id/tv_barra"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nome_cliente"
            />

            <TextView
                    android:id="@+id/tv_saldo"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/SaldoTitle"
                    android:textColor="@color/bg_page"

                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"

                    app:layout_constraintTop_toBottomOf="@+id/tv_contaNumero"
                    app:layout_constraintStart_toStartOf="parent"
            />
            <TextView
                    android:id="@+id/tv_saldoNumero"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/bg_page"
                    tools:text="@string/saldoNumero"
                    android:textSize="20sp"

                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"

                    app:layout_constraintTop_toBottomOf="@+id/tv_saldo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                    android:id="@+id/btn_logout"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"

                    android:src="@drawable/logout"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:contentDescription="@string/botaoLogout"
            />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_recycler"

            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/recentes"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"

                android:text="@string/recentesTitle"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />

        <android.support.v7.widget.RecyclerView

                android:id="@+id/recycler"

                android:layout_width="0dp"
                android:layout_height="0dp"

                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"

                app:layout_constraintTop_toBottomOf="@id/recentes"
                app:layout_constraintStart_toStartOf="@+id/recentes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

        />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>