<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@android:color/white"

        android:visibility="visible">

    <android.support.constraint.ConstraintLayout

            android:id="@+id/login_activity"

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:visibility="visible"
    >

        <ImageView
                android:src="@drawable/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imv_logo"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/logo"/>
        <Button
                android:id="@+id/btn_login"
                android:text="@string/loginTitle"

                android:layout_width="202dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="33dp"

                android:textAllCaps="false"
                android:background="@drawable/shapes"
                android:textColor="@android:color/white"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_login_password"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintVertical_bias="0.361"/>
        <EditText
                android:id="@+id/edt_login_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="105dp"
                android:layout_marginEnd="16dp"

                android:textColor="@color/bg_page"
                android:inputType="textEmailAddress"
                android:text=""
                android:textColorHint="@color/lightGrey"
                android:hint="@string/userAcces"

                android:ems="10"
                android:background="@drawable/shapes"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imv_logo"/>
        <EditText
                android:id="@+id/edt_login_password"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"

                android:textColorHint="@color/lightGrey"
                android:hint="@string/passwordAcess"

                android:textColor="@color/bg_page"
                android:inputType="textPassword"
                android:text=""

                android:ems="10"
                android:background="@drawable/shapes"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_login_user"/>
    </android.support.constraint.ConstraintLayout>


    <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:visibility="gone"
            android:progressTintMode="add"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</android.support.constraint.ConstraintLayout>